# carevl

./: .env.example  .gitignore  AGENTS.md  HUONG_DAN_ADMIN.md  README.md  TUTORIAL.md  admin-aggregate-data.bat  admin-build-hub.bat  admin-check-runtime-db.bat  dev-merge-canary-to-main.bat  install.sh  install_canary.sh  pyproject.toml  test_stations.csv
AGENTS/: 01_overview.md  02_guidelines.md  03_architecture.md  04_development.md  05_omr_pipeline.md  06_troubleshooting.md  IMAGE_GUIDE.md
AGENTS/ACTIVE/: 01_FastAPI_Core.md  02_SQLite_Security.md  (+25 more)
Admin/: README.md
Onboarding/: Bootstrap-User.ps1
app/: main.py  tests.py
config/: app_config.json  stations.csv  stations.json  user_registry.json
edge/: __init__.py  pyproject.toml
edge/app/: main.py
edge/app/api/: provision_routes.py  settings_routes.py
edge/app/models/: __init__.py  code_map_local.py  encounter.py  encounter_participant.py  observation.py  patient.py
edge/app/services/: credential_manager.py  git_operations.py  github_sync.py  invite_code.py  snapshot.py
edge/app/templates/provision/: index.html
edge/tests/: test_auth_flow.py
hub/: __init__.py  demo_batch_generate.sh  demo_generate_code.sh  pyproject.toml
modules/: auth.py  config_loader.py  membership.py  sync.py
reports/: dataset_2026_04.csv  onboarding_checklist.csv  onboarding_checklist.md
scripts/: aggregate_station_data.py  build_hub_duckdb.py  check_runtime_branches.py  install.ps1  install_canary.ps1  migrate_to_phase2.py  schema_phase2.sql  seed_phase2_questionnaires.py  setup.ps1
shared/: __init__.py  constants.py  models.py  pyproject.toml
sql/: phase2_schema.sql
test_invite_codes/: TRAM_001_invite_code.txt  TRAM_002_invite_code.txt  TRAM_003_invite_code.txt
ui/: admin_app.py  app.py
(+52 files in other folders)
