[project]
name = "carevl-monorepo"
version = "2.0.0"
description = "CareVL Monorepo - Edge and Hub applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["edge", "hub", "shared"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.5.0",
]
