[project]
name = "carevl-edge"
version = "2.0.0"
description = "CareVL Edge - Offline-first health screening app for stations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "apscheduler>=3.11.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "keyring>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pyinstaller>=6.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
